force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <label>Request Callback</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Request Callback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Callbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>