force-app/main/default/objects/Request__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Request Callbacks</relationshipLabel>
    <relationshipName>Request_Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>