force-app/main/default/objects/Request__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <label>Product Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>