force-app/main/default/objects/Request__c/fields/Product_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Link__c</fullName>
    <label>Product Image Link</label>
    <type>Url</type>
</CustomField>