force-app/main/default/objects/Request__c/fields/Product_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Page_Link__c</fullName>
    <label>Product Page Link</label>
    <type>Url</type>
</CustomField>